--- a/app/index.html
+++ b/app/index.html
@@ -24,14 +24,14 @@
 		<div class="container">
 			<div class="header__inner">
 				<div class="row align-items-center justify-content-between">
-					<div class="col-xl-auto col-xs-2">
+					<div class="col-lg-auto col-md-12">
 						<a href="#" class="logo">
 							<img src="img/logo.png" alt="СтройИнвест">
 						</a>
 						<!-- /.logo -->
 					</div>
 					<!-- /.col-xl -->
-					<div class="col-xl-auto col-xs-10">
+					<div class="col-lg-auto">
 						<button class="header-menu-btn icon-menu"></button>
 						<ul class="header-menu">
 							<li><a href="#">Главная</a></li>
