contacts and structure

--- a/app/contacts.html
+++ b/app/contacts.html
@@ -30,7 +30,7 @@
 						</a>
 						<!-- /.logo -->
 					</div>
-					<!-- /.col-xl -->
+					<!-- /.col-lg -->
 					<div class="col-lg-auto">
 						<button class="header-menu-btn icon-menu"></button>
 						<ul class="header-menu">
@@ -43,7 +43,7 @@
 						</ul>
 						<!-- /.header-menu -->
 					</div>
-					<!-- /.col-xl -->
+					<!-- /.col-lg -->
 				</div>
 				<!-- /.row -->
 			</div>
@@ -98,8 +98,30 @@
 				<div class="col-lg-8">
 					<div class="description">
 						<h2>Контакты</h2>
-						
-
+						<div class="contacts">
+							<a class="contacts-phone" href="tel:88002003040">
+								<img class="contacts-img" src="img/contacts/phone.png" alt="phone">
+							8 (800) 200-30-40</a>
+							<a class="contacts-mail" href="mailto:pochta@mail.ru">
+								<img class="contacts-img" src="img/contacts/mail.png" alt="mail">
+							pochta@mail.ru</a>
+							<a href="#" class="contacts-address">569447 г. Москва, ул. Морозова, д.12, 3 этаж
+							</a>
+							<!-- /.contacts-address -->
+							<a href="#" class="contacts-address">569447 г. Москва, ул. Ленина, д. 23, офис 2
+							</a>
+							<!-- /.contacts-address -->
+							<a class="btn btn-primary contacts-btn" href="#">Задать вопрос</a>
+							<div class="contacts-social-links">
+								<ul>
+									<li><a href="#" class="icon-vkontakte"></a></li>
+									<li><a href="#" class="icon-facebook"></a></li>
+									<li><a href="#" class="icon-instagram"></a></li>
+								</ul>
+							</div>
+							<!-- /.contacts-social-links -->
+						</div>
+						<!-- /.description-contacts -->
 					</div>
 					<!-- /.description -->
 					<div class="directions">
