--- a/app/index.html
+++ b/app/index.html
@@ -10,8 +10,6 @@
 	<title>СтройИнвест - корпоративный сайт</title>
 	<!-- Fonts google -->
 	<link href="https://fonts.googleapis.com/css?family=Roboto:400,700&display=swap&subset=cyrillic" rel="stylesheet">
-	<!-- Bootstrap-grid CSS -->
-	<link rel="stylesheet" href="css/bootstrap-grid.min.css">
 	<!-- Libs css -->
 	<link rel="stylesheet" href="css/libs.min.css">
 
@@ -215,6 +213,24 @@
 		<!-- /.container -->
 	</footer>
 	<!-- /.footer -->
+	<div class="modal">
+		<div class="modal-content">
+			<div class="close">&times;</div>
+			<h4>Заполните поля</h4>
+			<p>Мы свяжемся с вами в ближайшее время</p>
+			<div class="modal-form">
+				<form action="">
+					<input type="text" placeholder="Ваше имя">
+					<input type="text" placeholder="Ваш телефон">
+					<button type="button" class="btn btn-primary modal-form_btn">Отправить заявку</button>
+					<small>Нажимая кнопку, даю свое согласие  <a href="#">на обработку персональных данных</a></small>
+				</form>
+			</div>
+			<!-- /.modal-form -->
+		</div>
+		<!-- /.modal-content -->
+	</div>
+	<!-- /.modal -->
 
 
 	<!-- JQuery web -->
